--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="./css/style.css">    
 </head>
 <body>
-    <header class="page-header"> 
-        <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
-        <nav class="nav">
+    <header class="page-header">
+        <nav class="container">
+            <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
             <ul class="site-nav">
                 <li><a class="current nav-link" href="./index.html">Студия</a></li>
                 <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
@@ -25,12 +25,13 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
+        <section class="hero container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <a class="hero-btn" href="#">Заказать услугу</a>    
+            <a class="hero-button" href="#">Заказать услугу</a>              
         </section>
         <section class="about-us">
-            <h2 class="title">Особенности</h2>            
+            <div class="container">
+                <h2 class="title">Особенности</h2>
             <ul class="about-us-list">
                 <li>
                     <h3 class="about-us-title">Внимание к деталям</h3>
@@ -59,44 +60,50 @@
                 </li>
                 <li>
                     <img class="what-we-do-img" src="./images/img3.jpg" width="370" alt="картинка рабочего процесса 3">
-                </li>            
+                </li>
             </ul>
+        </div>
         </section>
         <section class="team">
+            <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list">
                 <li>
-                    <img src="./images/igor_demyanenko.jpg" width="270" alt="Игорь Демьяненко">
+                    <img class="photo" src="./images/igor_demyanenko.jpg" width="270" alt="Игорь Демьяненко">
                     <h3 class="team-worker">Игорь Демьяненко</h3>
                     <p class="profession">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/olga_repina.jpg" width="270" alt="Ольга Репина">
+                    <img class="photo" src="./images/olga_repina.jpg" width="270" alt="Ольга Репина">
                     <h3 class="team-worker">Ольга Репина</h3>
                     <p class="profession">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/nikolai_tarasov.jpg" width="270" alt="Николай Тарасов">
+                    <img class="photo" src="./images/nikolai_tarasov.jpg" width="270" alt="Николай Тарасов">
                     <h3 class="team-worker">Николай Тарасов</h3>
                     <p  class="profession">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/mihail_ermakov.jpg" width="270" alt="Михаил Ермаков">
+                    <img class="photo" src="./images/mihail_ermakov.jpg" width="270" alt="Михаил Ермаков">
                     <h3 class="team-worker">Михаил Ермаков</h3>
                     <p class="profession">UI Designer</p>
                 </li>
-            </ul>
+            </ul>                
+            </div>
         </section>
     </main>
     <footer class="footer">
-        <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
+        <div class="footer-nav container">
+         <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
         <address>
             <ul class="footer-auth-nav">
                 <li><a  class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </address>
+        </address>   
+        </div>
+        
     </footer>
 </body>
 </html>
