--- a/portfolio.html
+++ b/portfolio.html
@@ -12,8 +12,8 @@
 </head>
 <body>
         <header class="page-header">
-            <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
             <nav class="nav">
+                <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
                 <ul class="site-nav">
                     <li><a class="nav-link" href="./index.html">Студия</a></li>
                     <li><a class="current nav-link" href="./portfolio.html">Портфолио</a></li>
@@ -29,11 +29,11 @@
             <section >
                 <h1 class="title">Наши роботы</h1>
                 <ul class="button"> 
-                    <li><button class="current menu-button">Все</button></li>
-                    <li><button class="menu-button">Веб-сайты</button></li>
-                    <li><button class="menu-button">Приложения</button></li>
-                    <li><button class="menu-button">Дизайн</button></li>
-                    <li><button class="menu-button">Маркетинг</button></li>
+                    <li><button class="current button-icon">Все</button></li>
+                    <li><button class="button-icon">Веб-сайты</button></li>
+                    <li><button class="button-icon">Приложения</button></li>
+                    <li><button class="button-icon">Дизайн</button></li>
+                    <li><button class="button-icon">Маркетинг</button></li>
                 </ul>
                 <ul class="project">
                     <li><a href="">
