--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="./css/style.css">    
 </head>
 <body>
-    <header class="page-header">
-        <nav class="container">
+    <header class="page-header"> 
+        <div class="container">
+            <nav class="header-nav">
             <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
             <ul class="site-nav">
                 <li><a class="current nav-link" href="./index.html">Студия</a></li>
@@ -23,11 +24,14 @@
                 <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </nav>
+        </div>
     </header>
     <main>
-        <section class="hero container">
+        <section class="hero">
+            <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <a class="hero-button" href="#">Заказать услугу</a>              
+            <a class="hero-button" href="#">Заказать услугу</a>                      
+            </div>        
         </section>
         <section class="about-us">
             <div class="container">
@@ -103,7 +107,6 @@
             </ul>
         </address>   
         </div>
-        
     </footer>
 </body>
 </html>
