--- a/portfolio.html
+++ b/portfolio.html
@@ -12,18 +12,20 @@
 </head>
 <body>
         <header class="page-header">
-            <nav class="nav">
-                <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
-                <ul class="site-nav">
-                    <li><a class="nav-link" href="./index.html">Студия</a></li>
-                    <li><a class="current nav-link" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="nav-link" href="#">Контакты</a></li>
-                </ul>
-                <ul class="auth-nav">
-                    <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                </ul>
-            </nav>
+            <div class="container">
+                <nav class="header-nav">
+                    <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
+                    <ul class="site-nav">
+                        <li><a class="current nav-link" href="./index.html">Студия</a></li>
+                        <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                        <li><a class="nav-link" href="#">Контакты</a></li>
+                    </ul>
+                    <ul class="auth-nav">
+                        <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main>
             <section >
@@ -87,14 +89,16 @@
             </section>
         </main>
             <footer class="footer">
-                <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
-                <address>
-                    <ul class="footer-auth-nav">
-                        <li><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-                        <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                    </ul>
-                </address>
-            </footer>    
+                <div class="footer-nav container">
+                    <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
+                    <address>
+                        <ul class="footer-auth-nav">
+                            <li><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+                            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                        </ul>
+                    </address>
+                </div>
+            </footer>
 </body>
 </html>
