--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
     <link rel="stylesheet" href="./css/style.css">    
 </head>
 <body>
-    <header class="page-header"> 
-        <div class="container">
-            <nav class="header-nav">
-            <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
+    <header class="page-header">
+            <nav class="header-nav container">
+            <a href="./index.html" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
             <ul class="site-nav">
-                <li><a class="current nav-link" href="./index.html">Студия</a></li>
-                <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="nav-link" href="#">Контакты</a></li>
+                <li class="item"><a class="current nav-link" href="./index.html">Студия</a></li>
+                <li class="item"><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="nav-link" href="#">Контакты</a></li>
             </ul>
             <ul class="auth-nav">
-                <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+                <li class="item"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="item"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+             </ul>
         </nav>
-        </div>
     </header>
     <main>
         <section class="hero">
             <div class="container">
-            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
             <a class="hero-button" href="#">Заказать услугу</a>                      
             </div>        
         </section>
@@ -57,13 +55,13 @@
             <h2 class="what-we-do-title">Чем мы занимаемся</h2>
             <ul class="what-we-do-list">
                 <li>
-                    <img class="what-we-do-img" src="./images/img1.jpg" width="370" alt="картинка рабочего процесса 1">
+                    <img class="what-we-do-img" src="./images/img1.jpg" alt="картинка рабочего процесса 1">
                 </li>
                 <li>
-                    <img class="what-we-do-img" src="./images/img2.jpg" width="370" alt="картинка рабочего процесса 2">
+                    <img class="what-we-do-img" src="./images/img2.jpg" alt="картинка рабочего процесса 2">
                 </li>
                 <li>
-                    <img class="what-we-do-img" src="./images/img3.jpg" width="370" alt="картинка рабочего процесса 3">
+                    <img class="what-we-do-img" src="./images/img3.jpg" alt="картинка рабочего процесса 3">
                 </li>
             </ul>
         </div>
@@ -73,22 +71,22 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="team-list">
                 <li>
-                    <img class="photo" src="./images/igor_demyanenko.jpg" width="270" alt="Игорь Демьяненко">
+                    <img class="photo" src="./images/igor_demyanenko.jpg" alt="Игорь Демьяненко">
                     <h3 class="team-worker">Игорь Демьяненко</h3>
                     <p class="profession">Product Designer</p>
                 </li>
                 <li>
-                    <img class="photo" src="./images/olga_repina.jpg" width="270" alt="Ольга Репина">
+                    <img class="photo" src="./images/olga_repina.jpg" alt="Ольга Репина">
                     <h3 class="team-worker">Ольга Репина</h3>
                     <p class="profession">Frontend Developer</p>
                 </li>
                 <li>
-                    <img class="photo" src="./images/nikolai_tarasov.jpg" width="270" alt="Николай Тарасов">
+                    <img class="photo" src="./images/nikolai_tarasov.jpg" alt="Николай Тарасов">
                     <h3 class="team-worker">Николай Тарасов</h3>
                     <p  class="profession">Marketing</p>
                 </li>
                 <li>
-                    <img class="photo" src="./images/mihail_ermakov.jpg" width="270" alt="Михаил Ермаков">
+                    <img class="photo" src="./images/mihail_ermakov.jpg" alt="Михаил Ермаков">
                     <h3 class="team-worker">Михаил Ермаков</h3>
                     <p class="profession">UI Designer</p>
                 </li>
@@ -98,7 +96,7 @@
     </main>
     <footer class="footer">
         <div class="footer-nav container">
-         <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
+         <a href="./index.html" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
         <address>
             <ul class="footer-auth-nav">
                 <li><a  class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
