--- a/portfolio.html
+++ b/portfolio.html
@@ -11,94 +11,92 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-        <header class="page-header">
+    <header class="page-header">
+      <nav class="header-nav container">
+        <a href="./index.html" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
+        <ul class="site-nav">
+            <li class="item"><a class="nav-link" href="./index.html">Студия</a></li>
+            <li class="item"><a class="current nav-link" href="./portfolio.html">Портфолио</a></li>
+            <li class="item"><a class="nav-link" href="#">Контакты</a></li>
+        </ul>
+        <ul class="auth-nav">
+            <li class="item"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li class="item"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+        <section class="our-works">
             <div class="container">
-                <nav class="header-nav">
-                    <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
-                    <ul class="site-nav">
-                        <li><a class="current nav-link" href="./index.html">Студия</a></li>
-                        <li><a class="nav-link" href="./portfolio.html">Портфолио</a></li>
-                        <li><a class="nav-link" href="#">Контакты</a></li>
-                    </ul>
-                    <ul class="auth-nav">
-                        <li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                        <li><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                    </ul>
-                </nav>
+            <h1 class="title">Наши роботы</h1>
+            <ul class="button"> 
+              <li class="icon"><button class="current button-icon">Все</button></li>
+              <li class="icon"><button class="button-icon">Веб-сайты</button></li>
+              <li class="icon"><button class="button-icon">Приложения</button></li>
+              <li class="icon"><button class="button-icon">Дизайн</button></li>
+              <li class="icon"><button class="button-icon">Маркетинг</button></li>
+            </ul>
+            <ul class="project">
+              <li class="item"><a href="">
+                  <img src="./images/tehno.jpg" alt="картинка вебсайта на ноутбуке">
+                  <h2 class="project-name">Технокряк</h2>
+                  <p class="project-type">Веб-сайт</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/new-orlean.jpg" alt="плакат с баскетболистами">
+                  <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
+                  <p class="project-type">Дизайн</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/seafood.jpg" alt="логотип рыбного ресторана">
+                  <h2 class="project-name">Ресторан Seafood</h2>
+                  <p class="project-type">Приложение</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/headfones.jpg" alt="картинка наушников">
+                  <h2 class="project-name">Проект Prime</h2>
+                  <p class="project-type">Маркетинг</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/boxes.jpg" alt="картинка с коробками">
+                  <h2 class="project-name">Проект Boxes</h2>
+                  <p class="project-type">Приложение</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/pc.jpg" alt="картинка монитора с веб-сайтом">
+                  <h2 class="project-name">Inspiration has no Borders</h2>
+                  <p class="project-type">Веб-сайт</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/book.jpg" alt="фото с журнальным розворотом">
+                  <h2 class="project-name">Издание Limited Edition</h2>
+                  <p class="project-type">Дизайн</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/label.jpg" alt="картинка с биркой">
+                  <h2 class="project-name">Проект LAB</h2>
+                  <p class="project-type">Маркетинг</p>
+              </a></li>
+              <li class="item"><a href="">
+                  <img src="./images/laptop.jpg" alt="фото ноутбука с руками на клавиатуре">
+                  <h2 class="project-name">Growing Business</h2>
+                  <p class="project-type">Приложение</p>
+              </a></li>   
+            </ul>
             </div>
-        </header>
-        <main>
-            <section >
-                <h1 class="title">Наши роботы</h1>
-                <ul class="button"> 
-                    <li><button class="current button-icon">Все</button></li>
-                    <li><button class="button-icon">Веб-сайты</button></li>
-                    <li><button class="button-icon">Приложения</button></li>
-                    <li><button class="button-icon">Дизайн</button></li>
-                    <li><button class="button-icon">Маркетинг</button></li>
+      </section>
+  </main>
+    <footer class="footer">
+        <div class="footer-nav container">
+            <a href="./index.html" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
+            <address>
+                <ul class="footer-auth-nav">
+                    <li><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
                 </ul>
-                <ul class="project">
-                    <li><a href="">
-                        <img src="./images/tehno.jpg" alt="картинка вебсайта на ноутбуке">
-                        <h2 class="project-name">Технокряк</h2>
-                        <p class="project-type">Веб-сайт</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/new-orlean.jpg" alt="плакат с баскетболистами">
-                        <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
-                        <p class="project-type">Дизайн</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/seafood.jpg" alt="логотип рыбного ресторана">
-                        <h2 class="project-name">Ресторан Seafood</h2>
-                        <p class="project-type">Приложение</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/headfones.jpg" alt="картинка наушников">
-                        <h2 class="project-name">Проект Prime</h2>
-                        <p class="project-type">Маркетинг</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/boxes.jpg" alt="картинка с коробками">
-                        <h2 class="project-name">Проект Boxes</h2>
-                        <p class="project-type">Приложение</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/pc.jpg" alt="картинка монитора с веб-сайтом">
-                        <h2 class="project-name">Inspiration has no Borders</h2>
-                        <p class="project-type">Веб-сайт</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/book.jpg" alt="фото с журнальным розворотом">
-                        <h2 class="project-name">Издание Limited Edition</h2>
-                        <p class="project-type">Дизайн</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/label.jpg" alt="картинка с биркой">
-                        <h2 class="project-name">Проект LAB</h2>
-                        <p class="project-type">Маркетинг</p>
-                    </a></li>
-                    <li><a href="">
-                        <img src="./images/laptop.jpg" alt="фото ноутбука с руками на клавиатуре">
-                        <h2 class="project-name">Growing Business</h2>
-                        <p class="project-type">Приложение</p>
-                    </a></li>
-                    
-                </ul>
-
-            </section>
-        </main>
-            <footer class="footer">
-                <div class="footer-nav container">
-                    <a href="#" class="logo"><span>Web</span><span class="studio-logo">Studio</span></a>
-                    <address>
-                        <ul class="footer-auth-nav">
-                            <li><a class="link address" href="#">г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-                        </ul>
-                    </address>
-                </div>
-            </footer>
+            </address>
+        </div>
+    </footer>
 </body>
 </html>
